# stopwords

./: .gitignore  README.md  for col in ['user_id', 'product_id_order.py  pyproject.toml  results-stat.txt  results.txt
stopwords/: analyzer.py  iso-stopwords.py  nltk-stopwords.py  spacy-stopwords.py  stopwords.py
tests/: test_stopwords.py
